fixed a bug that broke promotion

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ i {
 /* sidebar */
 
 .sidebar {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: var(--sidebar);
   display: flex;
