--- a/style.css
+++ b/style.css
@@ -1,136 +1,77 @@
 :root {
-  --background: #2A1F2D;
-  --light: #59C9A5;
-  --dark: #5B6C5D;
-  --sidebar: #513C48;
-  --textbox: #3B2C35;
-  --green: #56E39F;
+  --background: #415561;
+  --banner: #6457A6;
+  --sidebar: #1D263B;  
+  --board: #1C1C1C;
+  --silver: #AC9C9C;
+  --dark: #147171;
+  --toast: #0A9063;
 }
 
-::-webkit-scrollbar {
-  background: var(--textbox);
-  width: 5px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--dark);
-}
-
-html {
-  scroll-behavior: smooth;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 
 body {
-  background-color: var(--background);
-  color: white;
-  font-family: monospace;
-
-  margin: 0;
-  padding: 0;
-
-  height: 100vh;
+  background: var(--background);
+  color: #F4F4F9;
+  font-family: 'Open Sans', sans-serif;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  place-items: center;
 }
 
-h1 {
-  margin-bottom: 5px;
-}
-
-p {
-  margin: 1px;
-}
-
-span {
-  font-size: 18px;
-}
-
-i {
-  font-size: 3.5vw;
-  transform: translate(-5%, -5%);
-}
+/* board */
 
 .container {
-  height: 100%;
+  width: 99vh;
+  height: 99vh;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 20px repeat(8, 1fr);
+  grid-template-rows: 20px repeat(8, 1fr);
 }
 
-.main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.restraint {
-  margin-top: 2rem;
-  max-width: 50%;
-}
-
-/* scores */
-.scores {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-/* chess board */
-
-.labels {
-  width: 37.55vw;
-  height: 37.55vw;
-
-  background-color: var(--sidebar);
+.label {
   display: grid;
-  grid-template-rows: 15px repeat(8, 1fr) 15px;
-  grid-template-columns: 15px repeat(8, 1fr) 15px;
-}
-
-.top-label {
+  place-items: center;
   text-align: center;
-  font-size: 12px;
-  cursor: default;
+  vertical-align: center;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
-.left-label {
-  font-size: 12px;
-
-  margin-top: auto;
-  margin-bottom: auto;
-  text-align: center;
-  cursor: default;
-}
-
+/* inner board */
 .board {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
-  
-  grid-row: 2/10;
+  background: var(--board);
   grid-column: 2/10;
-  
+  grid-row: 2/10;
+  padding: 10px;
+  border-radius: 10px;
+
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 1fr);
 }
 
-.light {
-  background-color: var(--light);
+.silver, .dark {
+  font-size: 3rem;
+  display: grid;
+  place-items: center;
+}
+
+.silver {
+  background: var(--silver);
 }
 
 .dark {
-  background-color: var(--dark);
-}
-
-.light, .dark {
-  width: 100%;
-  height: 100%;
-  
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-}
-
-.light:hover, .dark:hover {
-  filter: brightness(1.2);
+  background: var(--dark);
 }
 
 .white {
@@ -141,138 +82,96 @@ i {
   color: black;
 }
 
-.pos {
-  background-color: var(--green);
-  filter: saturate(2);
-}
-
-.threatened {
-  background-color: red;
-}
-
-/* promotion box */
-
-#promote {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  height: 7vw;
-  background-color: var(--sidebar);
-  margin-bottom: 30px;
-}
-
-#promote i {
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color: var(--dark);
-}
-
-#promote i:hover {
-  filter: brightness(1.2);
-}
-
 /* sidebar */
 
 .sidebar {
-  height: 100%;
+  background: var(--sidebar);
   width: 100%;
-  background-color: var(--sidebar);
+  height: 100vh;
+}
+
+.banner {
+  background: var(--banner);
+  width: 100%;
+  height: 75px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  padding: 2px 10px;
+}
+
+.banner div {
+  display: flex;
+}
+
+.banner i, .banner span {
+  font-size: 3rem;
+  margin-right: 1rem;
+}
+
+.banner span {
+  font-weight: bold;
+}
+
+#white-score {
+  margin-right: 30%;
+}
+
+/* toasts */
+
+.inner-sidebar {
+  padding: 25px 5px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
 }
 
-#actions {
-  width: 80%;
-  height: 60%;
-  margin-bottom: 20px;
-  padding: 3px;
-
-  background-color: var(--textbox);
-  border: 2px black solid;
-
-  overflow-y: scroll;
+.toast {
+  background: var(--toast);
+  width: clamp(20%, 400px, 80%);
+  height: 60px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-#actions p {
-  margin-bottom: 5px;
+.toast i {
+  font-size: 3rem;
 }
 
-#actions span {
-  display: inline-block;
-  font-size: 11px;
-  color: lightgray;
-  margin-left: 5px;
-  transform: translateY(-2px);
-}
-
-/* restart button */
-
-#restart {
-  background-color: var(--dark);
-  color: white;
-  border: 2px black solid;
-  font-family: monospace;
-  
-  font-size: 20px;
-  transition: 100ms;
-  margin-bottom: 20px;
-
-  cursor: pointer;
-  outline: none;
-}
-
-#restart:hover {
-  filter: brightness(1.1);
-}
-
-#restart:active {
-  filter: brightness(0.9);
+.toast svg {
+  height: 80%;
+  width: auto;
 }
 
 /* media queries */
+@media (max-width: 1000px) {
 
-@media (max-width: 800px) {
-
-  .container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-  }
-
-  #promote {
-    height: 5rem;
-  }
-
-  #actions {
-    width: 40%;
-    height: 300px;
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .sidebar {
-    height: 100%;
-  }
-
-  .restraint {
-    max-width: 90%;
-  }
-
-  .labels {
-    width: 60vw;
-    height: 60vw;
-  }
-
-  .restraint h1 {
-    margin-bottom: 20px;
-  }
-  
-  .sidebar h1 {
     margin-top: 50px;
+    min-height: 500px;
   }
 
-  i {
-    font-size: 5.5vw;
+}
+
+@media (max-width: 102vh) {
+
+  .container {
+    max-width: calc(100vw - 25px);
+    max-height: calc(100vw - 25px);
+  }
+
+  .silver, .dark {
+    font-size: 8vw;
   }
 
 }
