--- a/style.css
+++ b/style.css
@@ -94,12 +94,13 @@ body {
   background: var(--sidebar);
   width: 100%;
   height: 100vh;
+  display: grid;
+  grid-template-rows: 75px auto;
 }
 
 .banner {
   background: var(--banner);
   width: 100%;
-  height: 75px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   place-items: center;
@@ -131,6 +132,14 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
+  height: calc(100% - 25px);
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.inner-sidebar::-webkit-scrollbar {
+  display: none;
 }
 
 .toast {
@@ -141,6 +150,25 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin: 5px 0;
+}
+
+.new-toast {
+  animation: pop-up 500ms ease-in-out;
+}
+
+.old-toast {
+  animation: slide-down 500ms ease-out;
+}
+
+@keyframes pop-up {
+  from { transform: translateY(50%); opacity: 0; }
+  to { transform: translateY(0); opacity: 1; }
+}
+
+@keyframes slide-down {
+  from { transform: translateY(-100%); }
+  to { transform: translateY(0); }
 }
 
 .toast i {
@@ -150,6 +178,34 @@ body {
 .toast svg {
   height: 80%;
   width: auto;
+}
+
+.toast p {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.toast div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.toast div .from-grid {
+  font-size: 1rem;
+  color: lightgray;
+}
+
+.toast div svg {
+  height: 80%;
+  margin: 0 auto;
+}
+
+.toast div .to-grid {
+  font-size: 2rem;
+  color: white;
+  grid-column: 2/3;
+  grid-row: 1/3;
 }
 
 /* media queries */
