--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   --dark: #147171;
   --highlight: #6cd742;
   --toast: #0A9063;
+  --promo: #7067a5;
 }
 
 * {
@@ -61,10 +62,22 @@ body {
   grid-template-rows: repeat(8, 1fr);
 }
 
+/* cells */
 .silver, .dark {
   font-size: 3rem;
   display: grid;
   place-items: center;
+  position: relative;
+}
+
+.silver::after, .dark::after {
+  content: '';
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+  background-color: gray;
+  opacity: 0;
 }
 
 .silver {
@@ -78,6 +91,71 @@ body {
 .highlight {
   background: var(--highlight);
   border: 1px solid var(--board);
+}
+
+.selected::after {
+  opacity: 0.8;
+  transition: 50ms;
+}
+
+.threatened::before, .danger::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(50% 0%, 0% 90%, 100% 90%);
+  background-color: red;
+  z-index: 100;
+  opacity: 0;
+}
+
+.threatened::before {
+  animation: inCheck 2s ease-in-out infinite;
+}
+
+.danger::before {
+  animation: warning 1s ease-in-out;
+}
+
+.promoting::after {
+  content: '';
+  position: absolute;
+  opacity: 1;
+  width: 100%;
+  height: 101%;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  background-color: royalblue;
+  z-index: 100;
+  animation: promotion 1s ease-in-out;
+}
+
+@keyframes select {
+  from { opacity: 0; }
+  50% { opacity: 0.8; }
+  to { opacity: 0; }
+}
+
+@keyframes inCheck {
+  from { opacity: 0.7; }
+  50% { opacity: 0.3; }
+  to { opacity: 0.7; }
+}
+
+@keyframes warning {
+  from { opacity: 0.6; }
+  to { opacity: 0 }
+}
+
+@keyframes promotion {
+  from { transform: scaleY(0); transform-origin: top; }
+  25% { transform: scaleY(1); transform-origin: top; }
+  26% { transform: scaleY(1); transform-origin: bottom; }
+  to { transform: scaleY(0); transform-origin: bottom; }
+}
+
+/* pieces */
+.white, .black {
+  z-index: 99;
 }
 
 .white {
@@ -134,7 +212,7 @@ body {
   align-items: center;
   width: 100%;
   height: calc(100% - 25px);
-  overflow-y: auto;
+  overflow-y: scroll;
   scrollbar-width: none;
 }
 
@@ -145,7 +223,8 @@ body {
 .toast {
   background: var(--toast);
   width: clamp(20%, 400px, 80%);
-  height: 60px;
+  min-height: 60px;
+  max-height: 60px;
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -187,6 +266,8 @@ body {
 
 .toast div {
   display: grid;
+  height: auto;
+  width: 21%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
 }
@@ -206,6 +287,86 @@ body {
   color: white;
   grid-column: 2/3;
   grid-row: 1/3;
+}
+
+/* pawn promotion screen */
+#pawn-promo {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 101;
+  display: grid;
+  place-items: center;
+}
+
+#pawn-promo.hidden {
+  display: none;
+}
+
+#promo-box {
+  width: 60vw;
+  height: 45vh;
+  background: var(--promo);
+  border-radius: 20px;
+  box-shadow: 4px 4px darkslateblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: dropdown 500ms ease-out;
+}
+
+@keyframes dropdown {
+  from { opacity: 0; transform: translateY(-50%); }
+  to { opacity: 1; transform: translateY(0) }
+}
+
+#promo-box.black {
+  color: black;
+}
+
+#promo-box.white {
+  color: white;
+}
+
+#promo-box:first-child {
+  font-size: 3.5rem;
+}
+
+#promo-box svg {
+  width: 72%;
+  height: 80px;
+}
+
+.promotions {
+  width: 80%;
+  height: 25%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15%;
+}
+
+.promotions div {
+  height: 100%;
+  width: auto;
+  filter: brightness(0.9);
+  box-shadow: 2px 2px var(--dark);
+}
+
+.promotions div:hover {
+  filter: brightness(1);
+  cursor: pointer;
+}
+
+.promotions div:active {
+  filter: brightness(0.8);
+  transform: translate(2px, 2px);
+  box-shadow: 1px 1px var(--dark) inset;
+}
+
+.promotions div i {
+  font-size: 3rem;
 }
 
 /* media queries */
